chicagobub/css/bubble_chart.css
a, a:visited, a:active {
  color: #444;
}

.container {
  max-width: 900px;
  margin: auto;
}

.button {
  min-width: 130px;
  padding: 4px 5px;
  cursor: pointer;
  text-align: center;
  font-size: 13px;
  border: 1px solid #e0e0e0;
  text-decoration: none;
}

.button.active {
  background: #000;
  color: #fff;
}


#vis {
  width: 940px;
  height: 600px;
  clear: both;
  margin-bottom: 10px;
}

#toolbar {
  margin-top: 10px;
}

.year {
  font-size: 21px;
  fill: #aaa;
  cursor: default;
}

.tooltip {
	position: absolute;
	top: 100px;
	left: 100px;
  -moz-border-radius:5px;
	border-radius: 5px;
  border: 2px solid #000;
  background: #fff;
	opacity: .9;
  color: black;
	padding: 10px;
	width: 300px;
	font-size: 12px;
	z-index: 10;
}

.tooltip .title {
	font-size: 13px;
}

.tooltip .name {
  font-weight:bold;
}

.footer {
  text-align: center;
}

